--- a/Compiler/Resources/TODO.txt
+++ b/Compiler/Resources/TODO.txt
@@ -1,20 +1,28 @@
-﻿DONE 1. literal variable access
-DONE 2. store syntax
-DONE 3. type unification
-DONE     - booleans to int
-DONE     - void to int, void, bool, and arrays
-DONE     - if branches unify
-DONE     - store syntax unifies
-DONE     - function returns unify
-DONE 4. as syntax
-DONE 5. function invoking
-DONE 5. from ... alloc syntax
-DONE 6. array literals
-DONE 7. array indexing
-DONE 8. literal array indexing
-DONE 9. array slicing
-DONE 9. new regions
-DONE 10. while loops
-10. structs
-11. unions
-12. generics
+﻿Phase 1 =================
+
+DONE literal variable access
+DONE store syntax
+DONE type unification
+DONE     booleans to int
+DONE     void to int, void, bool, and arrays
+DONE     if branches unify
+DONE     store syntax unifies
+DONE     function returns unify
+DONE as syntax
+DONE function invoking
+DONE from ... alloc syntax
+DONE array literals
+DONE array indexing
+DONE literal array indexing
+DONE array slicing
+DONE new regions
+DONE while loops
+DONE structs
+DONE	struct declarations
+DONE	new structs
+DONE	void structs
+DONE unions
+DONE	union declarations
+DONE	new unions
+DONE	void unions
+for loops
