Abstract dependent types in a var declaration

--- a/Compiler/Resources/TODO.txt
+++ b/Compiler/Resources/TODO.txt
@@ -51,4 +51,4 @@ DONE	void unions
 DONE for loops
 DONE 	make for variables immutable
 DONE ref type (immutable variables)
-immutable arrays
+DONE immutable arrays
