Implement struct deconstructing

--- a/trophyc-new2/Resources/TODO.txt
+++ b/trophyc-new2/Resources/TODO.txt
@@ -9,6 +9,8 @@ String literals
 Doubles
 Floor division and real division
 
+Lines numbers in c comments
+
 Better conversions (graph based)
 Casting
 
