--- a/trophyc-new2/Resources/TODO.txt
+++ b/trophyc-new2/Resources/TODO.txt
@@ -6,8 +6,13 @@ Arrays
 DONE - Character literals
 String literals
 
-+=, -=, etc
+Parser statement conversion
+Loop state machine conversion
 break, continue, return
+
+Singular bool constraints
+
++=, -=, etc
 Coalescing
 Differentiate bitwise from logical operators
 
