--- a/trophyc-new2/Resources/TODO.txt
+++ b/trophyc-new2/Resources/TODO.txt
@@ -31,6 +31,7 @@ Anonymous structs and unions
 
 Region memory management
 
+Methods
 Enums
 Match expression
 Dependent booleans for type constraints
