--- a/trophyc-new2/Resources/TODO.txt
+++ b/trophyc-new2/Resources/TODO.txt
@@ -13,7 +13,6 @@ DONE - Lines numbers in c comments
 	Better conversions (graph based)
 	Casting
 	String literals / Singular strings
-	+=, -=, etc
 	Coalescing
 	Differentiate bitwise from logical operators
 
@@ -25,8 +24,9 @@ DONE - Lines numbers in c comments
 	alloc / free
 
 ### The Imperative Update
+	+=, -=, etc
 	DONE - Iterable syntax trees
-	Parser tree to imperative conversion
+	DONE - Parser tree to imperative conversion
 	Loop state machine conversion
 	break, continue, return
 
