--- a/resources/TODO.txt
+++ b/resources/TODO.txt
@@ -61,3 +61,4 @@ interfaces
 Implicit struct conversions
 Anonymous structs and unions
 Fix syntax highlighting
+Add "until" to for loops and make "to" inclusive
