Cache variable lifetimes

--- a/resources/TODO.txt
+++ b/resources/TODO.txt
@@ -20,7 +20,8 @@ Add "until" to for loops and make "to" inclusive
 	DONE - Add back address of operator
 	- Invalidate variables if aliasing could occur in assignments
 	DONE - Infer region allocation for let/var
-	- Remove new expression
+	Infer region allocation for function parameters
+	DONE - Remove new expression
 	Invalidate variables if aliasing could occur in function calls
 	Reimplement array literals
 	Reimplement lifetimes with if expressions
