--- a/resources/TODO.txt
+++ b/resources/TODO.txt
@@ -20,21 +20,23 @@ Add "until" to for loops and make "to" inclusive
 	DONE - Add back address of operator
 	DONE - Revive lifetime testing suite
 	DONE - Refactor IdentifierPath to VariablePath
-	Add content and location fields to Lifetime
-	Invalidate variables if aliasing could occur in assignments
+	DONE - Add content and location fields to Lifetime
+	DONE - Invalidate variables if aliasing could occur in assignments
 	DONE - Infer region allocation for let/var
-	Infer region allocation for function parameters
+	DONE - Infer region allocation for function parameters
 	DONE - Remove new expression
-	Invalidate variables if aliasing could occur in function calls
+	DONE - Invalidate variables if aliasing could occur in function calls
 	Reimplement array literals
-	Reimplement lifetimes with if expressions
+	DONE - Reimplement lifetimes with if expressions
 	Reimplement lifetimes with loops
-	Reimplement lifetimes with pointer dereferencing
-	Reimplement lifetimes with function calls
+	DONE - Reimplement lifetimes with pointer dereferencing
+	DONE - Reimplement lifetimes with function calls
 	Add conditional auto-copying when moving values between regions
 	Add function argument region annotations
 	DONE - Clean up lifetime codegen
 	DONE - Store regions as ints not pointers
+	Fix binary expressions
+	Fix for loops
 
 ### The Primitives Update
 	Bytes
