--- a/resources/TODO.txt
+++ b/resources/TODO.txt
@@ -8,6 +8,8 @@
 	- regionof operator
 	- Region constraints on functions, structs, unions, and locals
 	- Explicit regions
+	- Variable length arrays
+	- Array slicing
 	- Helix exported functions
 	- C exported functions
 	- Rename pointers to references
